docs/templates/app/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
  namespace: apps-APP_NAME
spec:
  selector:
    app: APP_NAME
  ports:
    - port: 80
      targetPort: 8080    # TODO: match containerPort in deployment.yaml
  type: ClusterIP
